# matchbox-common

./: ChangeLog  Makefile.am  configure.ac
data/: Makefile.am
data/vfolders-desktop/: Games.directory  Makefile.am
data/vfolders-pda/: Makefile.am  PIM.directory  Root.order
icons/: Makefile.am  mbadd.xpm  mbdown.xpm  mbfolder.xpm  mbfolderprev.xpm  mbnoapp.xpm  mbremove.xpm  mbup.xpm
icons/blondie/: Makefile.am
