desktop_files = Applications.directory \
                Games.directory        \
                PIM.directory          \
                Other.directory        \
                Root.directory         \
                Settings.directory     \
                Utilities.directory    \
                Root.order             

if WANT_PDA_FOLDERS
vfoldersdir = $(datadir)/matchbox/vfolders
vfolders_DATA = $(desktop_files)
endif

EXTRA_DIST = $(desktop_files)